--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ dj-database-url = "*"
 gunicorn = "*"
 django-heroku = "*"
 whitenoise = "*"
+django-two-factor-auth = "*"
 
 [dev-packages]
 flake8 = "*"
